--- a/content.css
+++ b/content.css
@@ -7,7 +7,7 @@
                          "seven eight eight six"
                          "seven nine nine ten";
     grid-template-columns: 210px 230px 242px 243px;
-    grid-template-rows: 230px 240px 240px 240px 10px;
+    grid-template-rows: 230px 210px 240px 240px 10px;
     grid-gap: 5px;
     margin-left: 38px;
 }
@@ -30,10 +30,11 @@
 
 #content_menu > four {
     grid-area: four;
+    font-style: normal;
     color: white;
-    background-color: blue;
-    
+    background-color: #1300bbea;
 }
+
 #content_menu > five{
     grid-area: five;
     border: 2px solid black;
